# RISC-V-Branch-Predictor

./: CMakeLists.txt  Readme.md
src/: main.cpp
src/branchPredictor/: BranchHistoryTable.cpp  BranchHistoryTable.h  BranchPredictor.cpp  BranchPredictor.h  BranchTargetBuffer.cpp  BranchTargetBuffer.h  Instruction.cpp  Instruction.h  Parser.cpp  Parser.h
src/utils/: Enums.h  FileUtils.cpp  FileUtils.h  NumberUtils.cpp  NumberUtils.h
